add: report/LaTeX format

--- a/report/appendices/appendix_a.tex
+++ b/report/appendices/appendix_a.tex
@@ -7,7 +7,7 @@
 \href{https://github.com/jeevandhakal/clusturing_group_4}{GitHub repository}
 
 \subsection{YouTube Video}
-See the \href{https://youtu.be/r8s4AN-6B1M}{YouTube Video}.
+\href{https://youtu.be/r8s4AN-6B1M}{YouTube Video}
 
 \subsection{Chat Session Links}
 \href{https://notebooklm.google.com/notebook/d60960bd-4ada-4bbe-b8cf-2f64da0a0d99?authuser=1}{Notebook LM}
